--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
 
 <style>
+*{
+    font-family: 'Lato' !important;
+}
   @media print 
   {
       @page {
@@ -19,7 +22,7 @@
     src: url('Lato-Regular.ttf');
   }
   canvas{
-    border:1px solid #cccccc;
+    border:1px solid #000;
     margin:3px;
   }
   .a4{
